Fix: scroll width jiggle on mobile 5

--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -15,7 +15,6 @@
         }
     }
      @media (min-width: 0px) and (max-width: 649px) {
-        grid-template-columns: repeat(1, minmax(100%, 1fr));
             &__section{
                  margin: 0 auto;
                 padding: 0;
